Fix width of form labels to ensure alignment (OE-2109)

--- a/assets/css/module.css
+++ b/assets/css/module.css
@@ -37,6 +37,7 @@
 #event_content .eyedrawFields.view { width: 280px; }
 #event_content .eyedrawFields>div { margin: 5px 0; }
 #event_content .eyedrawFields .label,#event_content .eyedrawFields .data { display: inline-block; }
+#event_content .eyedrawFields .aligned .label { width: 75px; }
 #event_content .Element_OphCiExamination_Refraction .eyedrawFields { width: 320px; }
 #event_content .Element_OphCiExamination_IntraocularPressure .cols2 > .left,
 #event_content .Element_OphCiExamination_IntraocularPressure .cols2 > .right { border-width: 4px 0 0 0; border-color: #000; border-style: solid; width: 493px; }
